add: validation on produk
