# src/docs/swagger.json
@@ -55,6 +55,13 @@
                 },
                 "password": {
                   "type": "string"
+                },
+                "role": {
+                  "enum": [
+                    "Seller",
+                    "Customer"
+                  ],
+                  "default": "Customer"
                 }
               }
             }
@@ -285,9 +292,6 @@
                 "name": {
                   "type": "string"
                 },
-                "category_id": {
-                  "type": "number"
-                },
                 "price": {
                   "type": "number"
                 },
@@ -296,9 +300,6 @@
                 },
                 "description": {
                   "type": "string"
-                },
-                "rating": {
-                  "type": "number"
                 }
               }
             }
@@ -362,9 +363,6 @@
                 "name": {
                   "type": "string"
                 },
-                "category_id": {
-                  "type": "number"
-                },
                 "price": {
                   "type": "number"
                 },
@@ -373,9 +371,6 @@
                 },
                 "description": {
                   "type": "string"
-                },
-                "rating": {
-                  "type": "number"
                 }
               }
             }
